--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,8 @@ body {
   display: flex;
   align-items: center;
   border-bottom: 1px solid var(--header-underline-color);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .navi-link,
 .contmail,
@@ -97,7 +99,7 @@ body {
   text-decoration: none;
   display: block;
   padding-top: 24px;
-  padding-bottom: 24px;
+  padding-bottom: 28px;
 }
 
 .logo-web {
@@ -174,6 +176,14 @@ body {
   text-align: center;
   padding-top: 188px;
   padding-bottom: 188px;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../img/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 .hero-text {
   color: var(--hero-text-color);
@@ -201,8 +211,18 @@ body {
 .button-order:hover,
 .button-order:focus {
   background-color: var(--hover-focus-button-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-
+.list-svg {
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+}
 .values-list {
   display: flex;
 }
@@ -245,6 +265,9 @@ body {
 }
 .our-team-list > .list-item {
   flex-basis: calc(100% / 4);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 .our-team-list .list-item + .list-item {
   margin-left: 24px;
@@ -252,6 +275,22 @@ body {
 .p-aboutus {
   line-height: 1.5;
   color: var(--p-contact-color);
+}
+.sotial-list {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+}
+.sotial-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d5ae5;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
 }
 .h3-values {
   font-weight: 500;
@@ -299,6 +338,14 @@ body {
   margin-left: 24px;
 }
 
+.buttons-list > .list-item:hover {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.buttons-list > .list-item:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 .button-portfolio {
   font-weight: 600;
   letter-spacing: 0.04em;
@@ -346,6 +393,9 @@ body {
 .our-works-list > .list-item {
   max-width: 360px;
 }
+.our-works-list > .list-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
 
 .p-worklist {
   color: var(--p-contact-color);
@@ -360,7 +410,29 @@ body {
   padding-left: 16px;
   padding-bottom: 32px;
 }
+/* Customers */
+.customers-list {
+  margin-top: 72px;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+  gap: 24px;
+}
+.customers-links {
+  display: flex;
+  width: 168px;
+  height: 88px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+}
+.customers-links:hover,
+.customers-links:focus {
+  border: 1px solid #4d5ae5;
+}
 /* FOOTER */
 .footer-menu {
   background-color: var(--footer-background-color);
@@ -379,7 +451,25 @@ body {
   line-height: 1.5;
   margin-top: 8px;
 }
-.footer-menu > .container > .logo-link {
-  padding: 0;
+.logo-link-footer {
+  padding-top: 0;
   margin-bottom: 16px;
+  text-decoration: none;
+  display: block;
+}
+.footer-link-header {
+  color: #fff;
+}
+.container.footer {
+  display: flex;
+}
+.footer-media-cont {
+  margin-left: 120px;
+}
+.sotial-link.footer {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.sotial-link.footer:hover,
+.sotial-link.footer:focus {
+  background-color: rgba(49, 208, 170, 1);
 }
